@@ -4,6 +4,9 @@ $Id$
 sigsafe-0.1.4 (not yet released)
 -------------
 
+* Fixed a major bug in which multithreaded Linux/x86_64 builds would
+  pass an incorrect first argument to the kernel.
+
 * Build system improvements. A couple command-line flags and an install
   target.
 
